<resources>
    <string name="OP_fail">操作失败</string>
    <string name="OP_success">操作成功</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">MegaEngineeringMode</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bluetooth_mac_addr">蓝牙Mac地址</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cancel">取消</string>
    <string name="cdsp_ssr_fulldump">CDSP_SRR_FULLDUMP</string>
    <string name="cdsp_ssr_fulldump_disable">CDSP_SRR_FULLDUMP: DISABLE</string>
    <string name="cdsp_ssr_fulldump_enable">CDSP_SRR_FULLDUMP: ENABLE</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_str_state">查询STR状态</string>
    <string name="chip_text">Chip text</string>
    <string name="choose">选取</string>
    <string name="clear_all_log">清除日志</string>
    <string name="clear_ddr">DDR校准</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_auth">关闭鉴权</string>
    <string name="core_dump">core_dump</string>
    <string name="core_dump_disable">CORE DUMP: DISABLE</string>
    <string name="core_dump_enable">CORE DUMP: ENABLE</string>
    <string name="current_vehicle_type_note">显示当前车型</string>
    <string name="ddr_tips">执行成功</string>
    <string name="debug_audiotesttools">AudioTestTools</string>
    <string name="debug_cameratesttools">CameraTestTools</string>
    <string name="debug_carservice_cacheinvalid">CarService缓存第一次无效值(重启后生效)</string>
    <string name="debug_carservice_cacheinvalid_closed">不缓存</string>
    <string name="debug_carservice_cacheinvalid_opened">缓存</string>
    <string name="debug_carservice_cacheinvalid_switch">切换</string>
    <string name="debug_tbox_check_close">DEBUG SVDC CHECK: CLOSE</string>
    <string name="debug_tbox_check_open">DEBUG SVDC CHECK: OPEN</string>
    <string name="debug_tbox_check_tips">命令下发成功，请勿频繁操作</string>
    <string name="debug_tbox_client_close">DEBUG TBOX CLIENT: CLOSE</string>
    <string name="debug_tbox_client_open">DEBUG TBOX CLIENT: OPEN</string>
    <string name="debug_tbox_location_close">DEBUG TBOX LOCATION: CLOSE</string>
    <string name="debug_tbox_location_open">DEBUG TBOX LOCATION: OPEN</string>
    <string name="device_text">Current USB Mode: Device</string>
    <string name="did_name">DID:</string>
    <string name="disable_str">关闭STR功能</string>
    <string name="disable_success">关闭成功</string>
    <string name="dump_close_export">dump colse and export(请先插入u盘)</string>
    <string name="dump_export_done">导出完成</string>
    <string name="dump_export_noudisk">没有插入u盘;如果手动导出，请忽略</string>
    <string name="dump_export_show">正在导出，请等待</string>
    <string name="dump_fw_record">dump_fw_record</string>
    <string name="dump_fw_record_show">dump_fw_record，,请先手动关闭selinux,在开始录音</string>
    <string name="dump_fw_rx">dump_fw_rx</string>
    <string name="dump_fw_track">dump_fw_track</string>
    <string name="dump_fw_track_show">dump_fw_track,请先手动关闭selinux,在开始比播放</string>
    <string name="dump_fw_tx">dump_fw_tx</string>
    <string name="dump_hal_rx">audio dump_hal_rx</string>
    <string name="dump_hal_tx">dump_hal_tx</string>
    <string name="dump_mode">点击切换DUMP模式，手动重启后生效，当前模式：</string>
    <string name="duplicate_type">重复修改</string>
    <string name="enable_str">打开STR功能</string>
    <string name="enable_success">打开成功</string>
    <string name="enter_9008_mode">进入9008模式</string>
    <string name="enter_fastboot_mode">进入fastboot模式</string>
    <string name="eoc_debug_off">EOC 当前状态：关</string>
    <string name="eoc_debug_on">EOC 当前状态：开</string>
    <string name="eoc_debug_send">已经发送信号，如果不变，请检查车机配置是否正确: C673 (eve +sony)</string>
    <string name="error_input_path">路径不应该为空</string>
    <string name="error_input_type">Log ID是(0-4)</string>
    <string name="error_log_clear">当前的LOG ID不支持删除Log</string>
    <string name="error_log_id">当前的LOG ID不支持设置log级别</string>
    <string name="error_log_save">当前的LOG ID不支持存储到U盘</string>
    <string name="et_vin_name">VIN:</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="failed">修改失败</string>
    <string name="full_dump_text">点击切换DUMP模式，手动重启后生效，当前模式：FULL DUMP</string>
    <string name="gcore_dump">点击打开/关闭GCORE DUMP， 当前状态:</string>
    <string name="gcore_dump_close">点击打开/关闭 GCORE DUMP, 当前状态: 关闭</string>
    <string name="gcore_dump_open">点击打开/关闭 GCORE DUMP, 当前状态: 打开</string>
    <string name="hardware_version_info">硬件版本信息</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="host_text">Current USB Mode: Host</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="id_content_choose_notice">显示选取的内容:</string>
    <string name="id_content_choose_title">显示选取的内容</string>
    <string name="id_content_notice">显示读取的内容</string>
    <string name="id_content_title">显示读取后的内容:</string>
    <string name="id_name">ID:</string>
    <string name="info_CERT_ID">CERT_ID</string>
    <string name="info_HU_ANDROID_VERSION">HU_ANDROID_VERSION</string>
    <string name="info_HU_HW_VERSION">HU_HW_VERSION</string>
    <string name="info_HU_QNX_VERSION">HU_QNX_VERSION</string>
    <string name="info_HU_SN">HU_SN</string>
    <string name="info_MCU_HW_VERSION">MCU_HW_VERSION</string>
    <string name="info_MCU_SWA_VERSION">MCU_SWA_VERSION</string>
    <string name="info_MCU_SWM_VERSION">MCU_SWM_VERSION</string>
    <string name="info_OS_VERSION">OS_VERSION</string>
    <string name="info_TBOX_CERT_ID">TBOX_CERT_ID</string>
    <string name="info_TBOX_ICCID_ID">TBOX_ICCID_ID</string>
    <string name="info_TBOX_TUID">TBOX_TUID</string>
    <string name="info_TUID">TUID</string>
    <string name="info_VID">VID</string>
    <string name="info_VIN">VIN</string>
    <string name="info_auth">鉴权</string>
    <string name="info_auth_close">关</string>
    <string name="info_auth_open">开</string>
    <string name="info_cert_id_with">证书有效</string>
    <string name="info_cert_id_without">证书无效</string>
    <string name="info_cluster">仪表</string>
    <string name="info_current_env">长安云环境</string>
    <string name="info_hud">HUD</string>
    <string name="info_ivi">中控</string>
    <string name="info_loading">Loading......</string>
    <string name="info_prod_env">生产环境</string>
    <string name="info_rotate">旋转机构</string>
    <string name="info_stg_env">预生产环境</string>
    <string name="info_total_memory">ANDROID MEMORY</string>
    <string name="input_path">请输入指定路径</string>
    <string name="input_type">请输入存储类型</string>
    <string name="lcd_version_info">LCD零部件版本信息</string>
    <string name="log_id">请选择LOG ID:</string>
    <string name="log_level">请选择Log级别:</string>
    <string name="main_title">工程模式</string>
    <string name="mic_new_layout">Mic Layout Config: 1 (new layout)</string>
    <string name="mic_old_layout">Mic Layout Config: 0 (old layout)</string>
    <string name="mic_tips">设置成功，重启系统后生效</string>
    <string name="mic_title">MIC布局配置</string>
    <string name="mini_dump_text">点击切换DUMP模式，手动重启后生效，当前模式：MIMI DUMP</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_picker_cancel">Cancel</string>
    <string name="mtrl_picker_confirm">Save</string>
    <string name="mtrl_picker_date_format">MMM dd, yyyy</string>
    <string name="mtrl_picker_header_prompt">Pick a Date</string>
    <string name="mtrl_picker_header_selected">%1$s</string>
    <string name="mtrl_picker_range_header_prompt">Pick a Date Range</string>
    <string name="mtrl_picker_range_header_selected">%1$s - %2$s</string>
    <string name="net_off_text">Tbox Net Switch: Off</string>
    <string name="net_on_text">Tbox Net Switch: On</string>
    <string name="no_support_config">尚不支持此DID修改</string>
    <string name="no_support_type">尚不支持此车型配置</string>
    <string name="no_tbox_connection">没有Tbox连接</string>
    <string name="notice_log">请选择DID和Vehicle Type</string>
    <string name="offline_clear">清除FLAG</string>
    <string name="offline_hint">显示当前车型</string>
    <string name="offline_modify">修改</string>
    <string name="op_cert_invalid">证书文件名不符合规范，请确认证书文件扩展名是否以.cer或.key结尾</string>
    <string name="op_choose_error">请确认选取的内容和要写入的ID是否匹配</string>
    <string name="op_error">请先读取文件或手动输入VIN</string>
    <string name="op_read_error">读取内容是空</string>
    <string name="qxdm_mode">QXDM_MODE</string>
    <string name="qxdm_mode_help">使用说明</string>
    <string name="qxdm_mode_state">state:DISABLE</string>
    <string name="read">读取</string>
    <string name="read_write_notice">请选择需要读写的ID</string>
    <string name="reset_factory">恢复出厂设置</string>
    <string name="rollback">回滚版本并恢复出厂</string>
    <string name="save_log">存储Log到U盘指定目录</string>
    <string name="set_log_level">修改Log级别</string>
    <string name="stop_tcp_dump">Stop tcp dump</string>
    <string name="tcp_dump_wifi">Start tcp dump wifi</string>
    <string name="tips_cert">"证书导入说明：
1、点击下拉菜单选择ID(重要)
2、点击选取按纽，选取要写入的数据
3、点击写入按纽，写入选取的数据
4、点击读取按纽，读取已写入的数据
"</string>
    <string name="tips_log">"Log说明：请执行如下三个步骤：
1、输入存储Log的绝对路径(例如:/mnt/media_rw/3892-C11E/mytest) 
2、选择存储Log的类型(如上LOG ID) 
3、点击存储Lo盘指定目录
Note:在U盘的根目录下创建一个空的log.mega.co目录后插入U盘,会自动保存所有log到U盘的log.mega.co目录下。
"</string>
    <string name="tips_offline">"车型切换说明：
1、点击下拉菜单选择DID和配置类型
2、点击修改按纽，修改成功后系统会自动重启。
3、点击清除FLAG前请确保MCU中有配置字信息
点击清除FLAG后，系统自动重启，重启后配置字信息从MCU中读取
如果MCU中没有数据，从USF分区读取。
重启后，列表中是修改后的数据:
"</string>
    <string name="vehicle_name">VehicleType:</string>
    <string name="vin_input">点击手动输入VIN</string>
    <string name="write">写入</string>
</resources>