<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/advanced_activity" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/navigation_bar" />
    <Button android:textSize="18.0dip" android:id="@id/factory_reset" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="55.0dip" android:text="@string/reset_factory" />
    <Button android:textSize="18.0dip" android:id="@id/clear_ddr" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="55.0dip" android:text="@string/clear_ddr" android:layout_toRightOf="@id/factory_reset" />
    <Button android:textSize="18.0dip" android:id="@id/rollback" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="55.0dip" android:text="@string/rollback" android:layout_toRightOf="@id/clear_ddr" />
    <Button android:textSize="18.0dip" android:id="@id/mode_fastboot" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="20.0dip" android:text="@string/enter_fastboot_mode" android:layout_below="@id/factory_reset" />
    <Button android:textSize="18.0dip" android:id="@id/mode_dump" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="20.0dip" android:text="@string/dump_mode" android:layout_below="@id/mode_fastboot" />
    <Button android:textSize="18.0dip" android:id="@id/gcore_dump" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="20.0dip" android:text="@string/gcore_dump" android:layout_below="@id/mode_dump" />
    <Button android:textSize="18.0dip" android:id="@id/core_dump" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="20.0dip" android:text="@string/core_dump" android:layout_below="@id/gcore_dump" />
    <Button android:textSize="18.0dip" android:id="@id/mode_9008" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="20.0dip" android:text="@string/enter_9008_mode" android:layout_below="@id/core_dump" />
    <Button android:textSize="18.0dip" android:id="@id/enable_str" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="20.0dip" android:text="@string/enable_str" android:layout_below="@id/mode_9008" />
    <Button android:textSize="18.0dip" android:id="@id/disable_str" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="20.0dip" android:text="@string/disable_str" android:layout_toRightOf="@id/enable_str" android:layout_below="@id/mode_9008" />
    <Button android:textSize="18.0dip" android:id="@id/check_str" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="20.0dip" android:text="@string/check_str_state" android:layout_toRightOf="@id/disable_str" android:layout_below="@id/mode_9008" />
    <Button android:textSize="18.0dip" android:id="@id/cdsp_ssr_fulldump" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="20.0dip" android:text="@string/cdsp_ssr_fulldump" android:layout_below="@id/enable_str" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/cdsp_ssr_fulldump">
        <Spinner android:id="@id/qxdm_mode_spinner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="20.0dip" />
        <Button android:textSize="18.0dip" android:id="@id/qxdm_mode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="20.0dip" android:text="@string/qxdm_mode" android:layout_toRightOf="@id/qxdm_mode_spinner" />
        <TextView android:textSize="20.0dip" android:textStyle="bold" android:id="@id/qxdm_mode_state" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="20.0dip" android:text="@string/qxdm_mode_state" android:layout_toRightOf="@id/qxdm_mode" />
        <Button android:textSize="18.0dip" android:id="@id/qxdm_mode_help" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="20.0dip" android:text="@string/qxdm_mode_help" android:layout_toRightOf="@id/qxdm_mode_state" />
    </LinearLayout>
</RelativeLayout>