<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/log_relative_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/navigation_bar" />
    <EditText android:id="@id/path" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="50.0dip" android:hint="@string/input_path" />
    <TextView android:id="@id/log_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="63.0dip" android:text="@string/log_id" android:layout_toRightOf="@id/path" />
    <Spinner android:id="@id/log_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginTop="60.0dip" android:layout_toRightOf="@id/log_id" />
    <TextView android:id="@id/level_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="63.0dip" android:text="@string/log_level" android:layout_toRightOf="@id/log_type" />
    <Spinner android:entries="@array/log_level" android:id="@id/log_level" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginTop="60.0dip" android:layout_toRightOf="@id/level_name" />
    <Button android:id="@id/save_log" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:text="@string/save_log" android:layout_below="@id/path" />
    <Button android:id="@id/clear_log" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="75.0dip" android:text="@string/clear_all_log" android:layout_toRightOf="@id/save_log" android:layout_below="@id/path" />
    <Button android:id="@id/set_log_level" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="75.0dip" android:text="@string/set_log_level" android:layout_toRightOf="@id/clear_log" android:layout_below="@id/path" android:textAllCaps="false" />
    <TextView android:textSize="18.0sp" android:textColor="@android:color/holo_red_dark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/tips_log" android:layout_below="@id/save_log" />
</RelativeLayout>