<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/navigation_bar" />
    <TextView android:textSize="25.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginTop="10.0dip" android:text="@string/lcd_version_info" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="35.0dip">
        <TextView android:textSize="21.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/info_ivi" />
        <TextView android:textSize="21.0sp" android:id="@id/tv_ivi" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="260.0dip" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="35.0dip">
        <TextView android:textSize="21.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/info_cluster" />
        <TextView android:textSize="21.0sp" android:id="@id/tv_cluster" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="260.0dip" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="35.0dip">
        <TextView android:textSize="21.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/info_hud" />
        <TextView android:textSize="21.0sp" android:id="@id/tv_hud" android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="260.0dip" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="35.0dip">
        <TextView android:textSize="21.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/info_rotate" />
        <TextView android:textSize="21.0sp" android:id="@id/tv_rotate" android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="60.0dip" android:layout_marginLeft="260.0dip" />
    </RelativeLayout>
</LinearLayout>